# RustyFlight

./: .gitignore  .gitmodules  Dockerfile  README.md  c2rust_log.txt  c2rust_unittest_log.txt  count_errors.txt  errorcheck.sh  magic.sh  omnimagic.sh  transpile.sh
src-original/spracingf3/: Cargo.toml  build_log.txt  lib.rs  out.txt  stm32_flash.ld
src-original/spracingf3/src/src/main/: main.rs
src-original/spracingf3/src/src/main/blackbox/: blackbox_encoding.rs
src-original/spracingf3/src/src/main/cms/: cms.rs  cms_menu_builtin.rs
src-original/spracingf3/src/src/main/common/: time.rs
src-original/spracingf3/src/src/main/config/: config_streamer.rs
src-original/spracingf3/src/src/main/drivers/: adc.rs  bus_i2c_stm32f30x.rs  bus_spi_pinconfig.rs  display_ug2864hsweg01.rs  light_ws2811strip.rs  pinio.rs  system_stm32f30x.rs  timer.rs
src-original/spracingf3/src/src/main/fc/: fc_core.rs  fc_init.rs  fc_rc.rs  fc_tasks.rs  rc_adjustments.rs
src-original/spracingf3/src/src/main/flight/: failsafe.rs  gps_rescue.rs  mixer.rs  pid.rs  servos_tricopter.rs
src-original/spracingf3/src/src/main/interface/: tramp_protocol.rs
src-original/spracingf3/src/src/main/io/: ledstrip.rs  osd.rs  rcdevice.rs  rcdevice_cam.rs  serial.rs  serial_4way.rs  spektrum_rssi.rs  spektrum_vtx_control.rs  vtx.rs  vtx_control.rs  vtx_rtc6705.rs  vtx_smartaudio.rs
src-original/spracingf3/src/src/main/pg/: beeper.rs
src-original/spracingf3/src/src/main/rx/: crsf.rs  sumd.rs
src-original/spracingf3/src/src/main/sensors/: adcinternal.rs  current.rs  gyroanalyse.rs
src-original/spracingf3/src/src/main/telemetry/: hott.rs  ltm.rs  msp_shared.rs  smartport.rs  srxl.rs  telemetry.rs
transpiled/AG3XF7/: Cargo.toml  lib.rs
transpiled/AG3XF7/src/src/main/: main.rs
transpiled/AG3XF7/src/src/main/blackbox/: blackbox.rs
transpiled/AG3XF7/src/src/main/cms/: cms_menu_blackbox.rs  cms_menu_builtin.rs  cms_menu_osd.rs
transpiled/AG3XF7/src/src/main/config/: feature.rs
transpiled/AG3XF7/src/src/main/drivers/: bus_spi_config.rs  bus_spi_pinconfig.rs  camera_control.rs  io.rs  light_led.rs  pwm_esc_detect.rs  serial_escserial.rs  serial_pinconfig.rs  sound_beeper.rs  timer_common.rs  timer_hal.rs  transponder_ir_arcitimer.rs  transponder_ir_erlt.rs  transponder_ir_ilap.rs
transpiled/AG3XF7/src/src/main/fc/: config.rs  controlrate_profile.rs  fc_hardfaults.rs  fc_init.rs
transpiled/AG3XF7/src/src/main/flight/: mixer.rs  mixer_tricopter.rs
transpiled/AG3XF7/src/src/main/interface/: cli.rs  msp.rs  settings.rs
transpiled/AG3XF7/src/src/main/io/: serial.rs  serial_4way_stk500v2.rs  spektrum_rssi.rs  transponder_ir.rs
transpiled/AG3XF7/src/src/main/msp/: msp_serial.rs
transpiled/AG3XF7/src/src/main/pg/: adc.rs  beeper.rs  beeper_dev.rs  bus_i2c.rs  bus_spi.rs
transpiled/AG3XF7/src/src/main/sensors/: acceleration.rs  barometer.rs  battery.rs  compass.rs  gyro.rs  rangefinder.rs  voltage.rs
transpiled/AG3XF7/src/src/main/vcp_hal/: usbd_desc.rs
transpiled/BEEBRAIN_V2F/: Cargo.toml  lib.rs
transpiled/BEEBRAIN_V2F/src/src/main/: main.rs
transpiled/BEEBRAIN_V2F/src/src/main/blackbox/: blackbox.rs
transpiled/BEEBRAIN_V2F/src/src/main/cms/: cms_menu_builtin.rs  cms_menu_vtx_rtc6705.rs
transpiled/BEEBRAIN_V2F/src/src/main/config/: feature.rs
transpiled/BEEBRAIN_V2F/src/src/main/drivers/: max7456.rs  pwm_output.rs
transpiled/BEEBRAIN_V2F/src/src/main/fc/: fc_init.rs  fc_tasks.rs  rc_controls.rs
transpiled/BEEBRAIN_V2F/src/src/main/flight/: mixer.rs  servos_tricopter.rs
transpiled/BEEBRAIN_V2F/src/src/main/interface/: cli.rs  msp_box.rs  settings.rs
transpiled/BEEBRAIN_V2F/src/src/main/io/: ledstrip.rs  osd.rs  vtx.rs
transpiled/BEEBRAIN_V2F/src/src/main/pg/: max7456.rs
transpiled/BEEBRAIN_V2F/src/src/main/sensors/: barometer.rs
transpiled/BEEBRAIN_V2F/src/src/main/telemetry/: frsky_hub.rs  ltm.rs
transpiled/CC3D_OPBL/: Cargo.toml
transpiled/CC3D_OPBL/src/src/main/: main.rs
transpiled/CC3D_OPBL/src/src/main/drivers/: bus_spi.rs  bus_spi_stdperiph.rs  flash.rs  pwm_output.rs  serial_pinconfig.rs  serial_uart.rs  serial_uart_pinconfig.rs  serial_uart_stm32f10x.rs  serial_usb_vcp.rs  stack_check.rs  system_stm32f10x.rs  usb_io.rs
transpiled/CC3D_OPBL/src/src/main/fc/: fc_init.rs  fc_tasks.rs  rc_controls.rs
transpiled/CC3D_OPBL/src/src/main/flight/: failsafe.rs  pid.rs
transpiled/CC3D_OPBL/src/src/main/interface/: cli.rs  msp.rs  settings.rs
transpiled/CC3D_OPBL/src/src/main/io/: serial.rs
transpiled/CC3D_OPBL/src/src/main/pg/: adc.rs
transpiled/CC3D_OPBL/src/src/main/rx/: crsf.rs  sbus.rs
transpiled/CC3D_OPBL/src/src/main/sensors/: battery.rs  gyro.rs  gyroanalyse.rs
transpiled/CC3D_OPBL/src/src/main/telemetry/: ltm.rs  telemetry.rs
transpiled/CC3D_OPBL/src/src/main/vcp/: stm32_it.rs  usb_desc.rs  usb_endp.rs  usb_istr.rs  usb_prop.rs  usb_pwr.rs
transpiled/CJMCU/: Cargo.toml  lib.rs
transpiled/CJMCU/src/src/main/: main.rs
transpiled/CJMCU/src/src/main/blackbox/: blackbox_io.rs
transpiled/COLIBRI_RACE/: Cargo.toml  lib.rs
transpiled/COLIBRI_RACE/src/src/main/: main.rs
transpiled/FURYF3/: Cargo.toml  lib.rs
transpiled/FURYF3/src/src/main/: main.rs
transpiled/IRCFUSIONF3/: Cargo.toml  lib.rs
transpiled/IRCFUSIONF3/src/src/main/: main.rs
transpiled/MATEKF722/: Cargo.toml  lib.rs
transpiled/MATEKF722/src/src/main/: main.rs
transpiled/MIDELICF3/: Cargo.toml  lib.rs
transpiled/MIDELICF3/src/src/main/: main.rs
transpiled/SIRINFPV/: Cargo.toml  lib.rs
transpiled/SIRINFPV/src/src/main/: main.rs
transpiled/SITL/: Cargo.toml
transpiled/SITL/src/src/main/: main.rs
transpiled/SPARKY/: Cargo.toml  lib.rs
transpiled/SPARKY/src/src/main/: main.rs
transpiled/SPRACINGF3MINI/: Cargo.toml  lib.rs
transpiled/SPRACINGF3MINI/src/src/main/: main.rs
transpiled/STM32F7X2/: Cargo.toml  lib.rs
transpiled/STM32F7X2/src/src/main/: main.rs
transpiled/X_RACERSPI/: Cargo.toml  lib.rs
transpiled/X_RACERSPI/src/src/main/: main.rs
transpiled/sitl/: Cargo.toml  lib.rs
transpiled/sitl/src/src/main/: main.rs
(+4123 files in other folders)
