[workspace]
members = [
]

[package]
name = "SPRACINGF3"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2018"
autobins = false

[lib]
name = "SPRACINGF3"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]


[[bin]]
path = "src/src/main/main.rs"
name = "main"

[dependencies.c2rust-bitfields]
version="0.3"
features = ["no_std"]


[dependencies.libc]
version="0.2"