[workspace]
members = [
]

[package]
name = "CC3D_OPBL"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2018"
autobins = false

[lib]
name = "CC3D_OPBL"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]


[[bin]]
path = "src/src/main/main.rs"
name = "main"

[dependencies]
c2rust-bitfields = "0.3"
libc = "0.2"



