[workspace]
members = [
]

[package]
name = "IRCFUSIONF3"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2018"
autobins = false

[lib]
name = "IRCFUSIONF3"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]


[[bin]]
path = "src/src/main/main.rs"
name = "main"

[dependencies]
c2rust-bitfields = "0.3"
libc = "0.2"



