[workspace]
members = [
]

[package]
name = "SPARKY"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2018"
autobins = false

[lib]
name = "SPARKY"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]


[[bin]]
path = "src/src/main/main.rs"
name = "main"

[dependencies]
c2rust-bitfields = "0.3"
libc = "0.2"



