[workspace]
members = [
]

[package]
name = "sitl"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2018"
autobins = false

[lib]
name = "sitl"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]


[[bin]]
path = "src/src/main/main.rs"
name = "main"

[dependencies]
c2rust-asm-casts = "0.1"
libc = "0.2"


